Resolving layout issues in Chrome.

--- a/src-gwt/org/opencms/gwt/client/ui/css/scrollBar.css
+++ b/src-gwt/org/opencms/gwt/client/ui/css/scrollBar.css
@@ -49,7 +49,7 @@ div.scrollbarLayer{
 }
 
 div.hiddenSize{
-	height:0px;
+	height:1px;
 	width:auto;
 	display:block;
 }
